--- a/registration form/Bootstrap Framework/practice-2/login.html
+++ b/registration form/Bootstrap Framework/practice-2/login.html
@@ -2,19 +2,23 @@
 <html>
 <head>
   <title>Login</title>
+  <link rel="stylesheet" href="style_login.css">
 </head>
 <body>
-  <h2>Login</h2>
-  <form method="post" action="login.php">
-    <label>Email:</label>
-    <input type="email" name="email" required><br><br>
+  <div class="login-container">
+    <h2>Login</h2>
+    <form method="post" action="login.php">
+      <label>Email:</label>
+      <input type="email" name="email" required><br><br>
 
-    <label>Password:</label>
-    <input type="password" name="password" required><br><br>
+      <label>Password:</label>
+      <input type="password" name="password" required><br><br>
 
-    <input type="submit" value="Login">
-  </form>
-  <br>
-  <a href="register.html">Don't have an account? Register</a>
+      <input type="submit" value="Login">
+    </form>
+
+    <!-- Anchor link placed right under the form -->
+    <a href="register.html">Don't have an account? Register</a>
+  </div>
 </body>
 </html>
