--- a/registration form/Bootstrap Framework/practice-2/register.html
+++ b/registration form/Bootstrap Framework/practice-2/register.html
@@ -13,7 +13,7 @@
         <div class="form-items">
           <h3>Register Today</h3>
           <p>Fill in the data below.</p>
-          <form method="post" action="register.php">
+          <form method="post" action="register.php" enctype="multipart/form-data">
             <input class="form-control" type="text" name="name" placeholder="Full Name" required />
             <input class="form-control" type="email" name="email" placeholder="E-mail Address" required />
 
@@ -30,8 +30,11 @@
               <label>Gender:</label><br />
               <input type="radio" name="gender" value="male" required /> Male
               <input type="radio" name="gender" value="female" required /> Female
-              <input type="radio" name="gender" value="secret" required /> Secret
+              <input type="radio" name="gender" value="Others" required /> Others
             </div>
+            <!-- ✅ New File Upload Field -->
+  <label class="upload-label">Upload Resume or Image:</label><br />
+  <input class="form-control" type="file" name="upload_file" accept=".pdf,.jpg,.jpeg,.png" required /><br />
 
             <div class="confirm-checkbox">
               <input type="checkbox" required />
